--- a/DebugCode/debug_code.html
+++ b/DebugCode/debug_code.html
@@ -12,8 +12,8 @@
     <input type="number" id="input1"><br><br>
     <label for="input2">Enter Number 2:</label>
     <input type="number" id="input2"><br><br>
-    <button onclick="performOperation()">Perform Operation</button>
-    <p id="result"></p>
+    <button onclick="performOperation()">Perform Math Operation</button>
+    <p id="result" style="white-space: pre"></p>
     <script src="./debug_code.js"></script>
 </body>
 
